--- a/html/css/main.css
+++ b/html/css/main.css
@@ -177,9 +177,9 @@ body {
 .player-inventory-first {
     position: absolute;
     margin-top: -0.6rem;
-    margin-left: -8rem;
-    width: 8rem; 
-    height: 33.8rem;
+    margin-left: -19%;
+    width: 19%; 
+    height: 78.2%;
     background-color: var(--color-primary);
     padding: 10px;
     border-bottom-left-radius: 10px;
@@ -311,20 +311,33 @@ body {
     margin: 3px;
     transition: opacity 0.2s ease 0s;
     border-radius: 9px;
-    opacity: 60%;
+    opacity: 90%;
 }
 
 .player-inventory-first .item-slot {
     position: relative;
-    width: 92%;
-    height: 18.7%;
+    width: 89.2%;
+    height: 18.85%;
     float: left;
     border: 2px solid #41414b;
     background-color: #33343d !important;
     margin: 3px;
     transition: opacity 0.2s ease 0s;
     border-radius: 9px;
-    opacity: 60%;
+    opacity: 90%;
+}
+
+.other-inventory .item-slot {
+    position: relative;
+    width: 23.2%;
+    height: 15.75%;
+    float: left;
+    border: 2px solid #41414b;
+    background-color: #33343d !important;
+    margin: 3px;
+    transition: opacity 0.2s ease 0s;
+    border-radius: 9px;
+    opacity: 90%;
 }
 
 .item-slot {
@@ -337,12 +350,12 @@ body {
     margin: 3px;
     transition: opacity 0.2s ease 0s;
     border-radius: 9px;
-    opacity: 60%;
+    opacity: 90%;
 }
 
 .item-slot:hover {
     background-color: #292932 !important;
-    opacity: 60%;
+    opacity: 90%;
 }
 
 .inv-option-item {
@@ -757,10 +770,9 @@ body {
     float: left;
     margin: 0 auto;
     margin-right: 1vh;
-    width: 6.15rem;
-    height: 7.15rem;
-    background: rgba(26, 26, 26, 0.2);
-    border-radius: 5px;
+    width: 10vh;
+    height: 11vh;
+    background: rgba(54, 54, 54, 0.233);
 }
 
 #itembox-action {
@@ -785,7 +797,7 @@ body {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 0.3vh;
+    height: 5%;
 }
 
 .itembox-image {
@@ -826,7 +838,7 @@ body {
     margin: 3px;
     transition: opacity 0.2s ease 0s;
     border-radius: 9px;
-    opacity: 60%;
+    opacity: 90%;
     background-color: #5c5c6c1a;
 }
 
@@ -889,11 +901,11 @@ body {
     position: absolute; 
     font-weight: 400; 
     color: #20202062; 
-    padding-top: 4vh; 
+    padding-top: 42%; 
     padding-bottom: 0px; 
-    padding-left: 2.35vh; 
+    padding-left: 29%; 
     text-align: center; 
-    font-size: 7vh; 
+    font-size: 4rem; 
     line-height: 1.8vh; 
     font-family: 'Roboto', sans-serif !important;
     z-index: -1;
@@ -911,7 +923,7 @@ body {
     margin: 3px;
     transition: opacity 0.2s ease 0s;
     border-radius: 9px;
-    opacity: 60%;
+    opacity: 90%;
     z-index: 9999;
 }
 
@@ -984,11 +996,11 @@ body {
     position: relative;
     margin: 0 auto;
     margin-top: -12%;
-    left: -30%;
+    left: -18%;
     width: auto;
     height: auto;
-    max-width: 105px;
-    max-height: 100%;
+    max-width: 120%;
+    max-height: 120%;
 }
 
 .ammo-container {
