--- a/html/css/main.css
+++ b/html/css/main.css
@@ -301,45 +301,6 @@ body {
     margin: 0px auto;
 }
 
-.player-inventory .item-slot {
-    position: relative;
-    width: 14.2%;
-    height: 14.2%;
-    float: left;
-    border: 2px solid #41414b;
-    background-color: #33343d !important;
-    margin: 3px;
-    transition: opacity 0.2s ease 0s;
-    border-radius: 9px;
-    opacity: 90%;
-}
-
-.player-inventory-first .item-slot {
-    position: relative;
-    width: 89.2%;
-    height: 18.85%;
-    float: left;
-    border: 2px solid #41414b;
-    background-color: #33343d !important;
-    margin: 3px;
-    transition: opacity 0.2s ease 0s;
-    border-radius: 9px;
-    opacity: 90%;
-}
-
-.other-inventory .item-slot {
-    position: relative;
-    width: 23.2%;
-    height: 15.75%;
-    float: left;
-    border: 2px solid #41414b;
-    background-color: #33343d !important;
-    margin: 3px;
-    transition: opacity 0.2s ease 0s;
-    border-radius: 9px;
-    opacity: 90%;
-}
-
 .item-slot {
     position: relative;
     width: 98px;
@@ -1283,29 +1244,139 @@ body {
     justify-content: center;
 }
 
-.first-slots-container-container {
-    position: absolute;
-    float: left;
-    top: 9%;
-    left: 0.2%;
-    width: 35.7%;
-    max-width: 35.7%;
-    height: 64.17%;
-    max-height: 64.17%;
-
+@media (width: 2560px) and (height: 1440px) {
+    .item-slot {
+        position: relative;
+        width: 133px;
+        height: 133px;
+        float: left;
+        border: 2px solid #41414b;
+        background-color: #33343d !important;
+        margin: 3px;
+        transition: opacity 0.2s ease 0s;
+        border-radius: 9px;
+        opacity: 90%;
+    }
 }
 
-.first-slots-container {
-    position: absolute;
-    float: left;
-    top: 15%;
-    left: 34.2%;
-    width: 27.7%;
-    max-width: 35.7%;
-    height: 64.17%;
-    max-height: 64.17%;
-    background: var(--color-primary);
-    border-bottom-left-radius: 10px;
-    border-top-left-radius: 10px;
-      
+@media (width: 3360px) and (height: 1440px) {
+    .item-slot {
+        position: relative;
+        width: 133px;
+        height: 133px;
+        float: left;
+        border: 2px solid #41414b;
+        background-color: #33343d !important;
+        margin: 3px;
+        transition: opacity 0.2s ease 0s;
+        border-radius: 9px;
+        opacity: 90%;
+    }
+    .player-inventory-bg {
+        position: absolute;
+        float: left;
+        top: 15%;
+        left: 29.2%;
+        width: 26%;
+        max-width: 25.7%;
+        height: 64.17%;
+        max-height: 64.17%;
+        background: var(--color-primary);
+        border-bottom-left-radius: 10px;
+        border-top-left-radius: 10px;
+    }
+    .other-inventory-bg {
+        position: absolute;
+        top: 15%;
+        float: right;
+        right: 26%;
+        margin: 0 auto;
+        width: 19.26%;
+        max-width: 19.26%;
+        height: 64.17%;
+        max-height: 64.17%;
+        background: var(--color-primary);
+        border-bottom-right-radius: 10px;
+        border-top-right-radius: 10px;
+    }
+
+    #progressbar {
+        width: 85%;
+        margin-left: 92.8%;
+        margin-top: 1.8%;
+        border-radius: 15px;
+        background-color: var(--color-secondary);
+    }
+    
+    #progressbar-other {
+        width: 57.2%;
+        margin-left: -6.2%;
+        margin-top: 1.8%;
+        border-radius: 15px;
+        background-color: var(--color-secondary);
+    }
+    
+    .inv-options {
+        position: absolute;
+        margin: 8.7% auto;
+        right: -10.6%;
+        height: 4rem;
+        width: 4.3rem;
+        left: 1vh;
+        cursor: pointer; /* Can also be 'none' however, as these are the buttons I feel as the pointer fits better */
+        z-index: 200;
+    }
+
+    .inv-option-item {
+        margin-top: 10%;
+        height: 3rem;
+        width: 4rem;
+        margin-left: 6%;
+        background: var(--color-secondary)!important;
+        border: none;
+        color: white;
+        transition: background-color .1s linear;
+        border-radius: 5px!important;
+        opacity: 70%;
+    }
+
+    #player-inv-label {
+        position: relative;
+        color: white;
+        font-size: 20px;
+        font-family: 'Roboto', sans-serif !important;
+        font-weight: 600;
+        letter-spacing: 0.01vh;
+        right: -93%;
+        float: left;
+        text-transform: normal;
+        cursor: none;
+    }
+    
+    #other-inv-label {
+        position: relative;
+        color: white;
+        font-size: 20px;
+        font-family: 'Roboto', sans-serif !important;
+        font-weight: 600;
+        letter-spacing: 0.01vh;
+        left: -6%;
+        float: left;
+        text-transform: normal;
+        cursor: none;
+    }
+
+    #other-inv-weight {
+        position: relative;
+        color: rgb(255, 255, 255);
+        font-size: 16px;
+        font-weight: 900;
+        font-family: 'Roboto', sans-serif !important;
+        letter-spacing: 0.1vh;
+        bottom: 30px;
+        right: 49.5%;
+        float: right;
+        cursor: none;
+    }
+
 }
